# strawberry-picking-rpi

./: .gitignore  .gitmodules  README.md  desc.txt
.devcontainer/: Dockerfile  devcontainer.json  installations.sh  postCreateCommand.sh
src/sprpi_arm_bringup/: package.xml  setup.cfg  setup.py
src/sprpi_arm_bringup/launch/: bringup_with_rviz.launch.py  depth_camera_bringup.launch.py  main_launch.launch.py
src/sprpi_arm_bringup/rviz/: main_launch.rviz
src/sprpi_arm_hwi/: CMakeLists.txt  package.xml  sprpi_arm_hwi.xml
src/sprpi_arm_hwi/bringup/config/: sprpi_arm_hwi_controllers.yaml  sprpi_arm_hwi_jtc.yaml
src/sprpi_arm_hwi/bringup/launch/: sprpi_arm_hwi.launch.py
src/sprpi_arm_hwi/hardware/: sprpi_arm_hwi.cpp
src/sprpi_arm_hwi/hardware/include/sprpi_arm_hwi/: arduino_serial_comms.hpp  sprpi_arm_hwi.hpp
src/sprpi_arm_mtc/: CMakeLists.txt  package.xml
src/sprpi_arm_mtc/config/: main_task_node_config.yaml  sprpi_arm_mtc_config.yaml
src/sprpi_arm_mtc/launch/: mtc_demo.launch.py  pick_place_demo.launch.py  sprpi_main_task_node.launch.py
src/sprpi_arm_mtc/src/: main_task_node.cpp  sprpi_arm_mtc.cpp
src/strawberry_picking_rpi_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/strawberry_picking_rpi_control/strawberry_picking_rpi_control/: joint_state_uploader.py
src/strawberry_picking_rpi_control_py/: package.xml  setup.cfg  setup.py
src/strawberry_picking_rpi_control_py/strawberry_picking_rpi_control_py/: joint_state_uploader.py
src/strawberry_picking_rpi_description/: CMakeLists.txt  README.md  package.xml
src/strawberry_picking_rpi_description/launch/: display.launch.py
src/strawberry_picking_rpi_description/meshes/: README.md  l_type_servo_bracket.stl  long_u_type_servo_bracket.stl  mg996r_servo.stl  mg996r_servo_reversed.stl  multi_functional_servo_bracket.stl  multi_functional_servo_bracket_with_servo.stl  multi_functional_servo_bracket_with_servo_reverse.stl  u_type_robot_waist_bracket.stl
src/strawberry_picking_rpi_description/meshes/primitives/: long_u_type_servo_bracket_primitive.stl
src/strawberry_picking_rpi_description/rviz/: depthcloud_to_pointcloud2.rviz
src/strawberry_picking_rpi_description/urdf/: .txt  gripper.urdf.xacro  l_type_servo_bracket.urdf.xacro  long_u_type_servo_bracket.urdf.xacro  model_for_moveit.urdf  multi_functional_servo_bracket_with_servo.urdf.xacro  robotic_base_with_accessories.urdf.xacro  strawberry_picking_rpi.urdf.xacro  strawberry_picking_rpi.xacro  strawberry_picking_rpi_control.urdf.xacro  u_type_robot_waist_bracket.urdf.xacro
src/strawberry_picking_rpi_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/strawberry_picking_rpi_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  strawberry_picking_rpi.ros2_control.xacro  strawberry_picking_rpi.srdf  strawberry_picking_rpi.urdf.xacro
src/strawberry_picking_rpi_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
